# metal-engine

./: .gitignore  .output.txt  CMakeLists.txt  README.md  main.cpp  vcpkg.json
src/: ApplicationContext.cpp  ApplicationContext.h  ApplicationEventContext.cpp  ApplicationEventContext.h  CMakeLists.txt  MetalContextProvider.cpp  MetalContextProvider.h  README.md  main.cpp  main.mm
src/backends-impl/: IUIRenderer.h
src/backends-impl/metal/: MetalRenderer.h  MetalRenderer.mm
src/common/: AbstractCoreRepository.h  AbstractImporter.h  AbstractResourceService.cpp  AbstractResourceService.h  AbstractRuntimeComponent.h  CMakeLists.txt  Changeable.h  FieldMetadata.h  FieldType.h  FileDialogUtil.h  FileEntry.h  FileExtensions.h  FileMetadata.h  FilesUtil.cpp  FilesUtil.h  IAsyncSync.h  IContextMember.cpp  IContextMember.h  IDisposable.h  IEventMember.cpp  IEventMember.h  IInit.h  ILoader.h  IRepository.h  ISerialize.cpp  ISerialize.h  IService.h  ISync.h  Icons.cpp  Icons.h  Identifiable.h  Inspectable.cpp  Inspectable.h  InspectableMember.h  InspectedField.h  InspectedMethod.h  InspectionBundle.h  LoggerUtil.cpp  LoggerUtil.h  Reflection.cpp  (+12 more)
src/common/enum/: ComponentType.h  LevelOfDetail.cpp  LightVolumeType.h  NotificationSeverity.h  ShadingMode.h
src/common/inspection/: FieldType.h  Inspectable.cpp  Inspectable.h  InspectableMember.h  InspectedField.h  InspectedMethod.h
src/common/interface/: AbstractRepository.cpp  AbstractRepository.h  AbstractResourceService.cpp  AbstractResourceService.h  AbstractRuntimeComponent.cpp  AbstractRuntimeComponent.h  BinarySerializable.h  EntityID.h  Icons.h  Identifiable.h  Initializable.h  MEnum.h  Serializable.h  engine-definitions.h
src/common/runtime/: AbstractRepository.cpp  AbstractRepository.h  AbstractRuntimeComponent.h  AbstractSystem.cpp  AbstractSystem.h  ApplicationContext.cpp  ApplicationContext.h  FrameData.cpp  GLFWContext.cpp  GLFWContext.h  GUIContext.cpp  GUIContext.h  VulkanContext.cpp  VulkanContext.h  VulkanFrameData.cpp  VulkanFrameData.h
src/common/util/: UIUtil.h  Util.h  VulkanUtils.cpp  VulkanUtils.h
src/context/: ApplicationContext.cpp  ApplicationContext.h  ApplicationSingletons.h  GLFWContext.cpp  GLFWContext.h  GuiContext.cpp  GuiContext.h  VulkanContext.cpp  VulkanContext.h
src/context/buffers/: GBufferShadingPushConstant.h  GlobalDataUBO.h  MeshPushConstant.h  PPSettingsUBO.h
src/context/editor/: EditorPanel.cpp  EditorPanel.h
src/context/engine/: CommandBufferRecorder.cpp  CommandBufferRecorder.h  EngineContext.cpp  EngineContext.h
src/context/glfw/: GLFWContext.cpp  GLFWContext.h
src/context/gui/: GuiContext.cpp  GuiContext.h
src/context/repository/: AbstractCoreRepository.cpp  AbstractCoreRepository.h  CoreBuffers.cpp  CoreBuffers.h  CoreDescriptorSets.cpp  CoreDescriptorSets.h  CoreFrameBuffers.cpp  CoreFrameBuffers.h  CorePipelines.cpp  CorePipelines.h  CoreRenderPasses.cpp  CoreRenderPasses.h  CoreTextures.cpp  CoreTextures.h  GlobalDataUBO.h  MeshPushConstant.h  ResourceRepository.h
src/context/runtime/: BufferInstance.cpp  BufferInstance.h  CommandBufferInstance.cpp  CommandBufferInstance.h  CommandBufferRecorder.cpp  CommandBufferRecorder.h  DescriptorInstance.cpp  DescriptorInstance.h  FrameBufferAttachment.cpp  FrameBufferAttachment.h  FrameBufferInstance.h  FrameData.h  MeshData.h  MeshInstance.cpp  MeshInstance.h  PipelineInstance.cpp  PipelineInstance.h  RenderPass.cpp  RenderPass.h  ResourceType.h  RuntimeResource.h  ShaderModule.h  ShaderModuleInstance.cpp  ShaderModuleInstance.h  TextureInstance.h  VertexData.h
src/context/service/: BufferService.cpp  BufferService.h  CommandService.cpp  CommandService.h  DescriptorService.cpp  DescriptorService.h  FrameBufferService.cpp  FrameBufferService.h  MeshService.cpp  MeshService.h  PipelineService.cpp  PipelineService.h  ShaderService.cpp  ShaderService.h  ShaderUtil.cpp  ShaderUtil.h  TextureService.cpp  TextureService.h
src/context/vulkan/: VulkanContext.cpp  VulkanContext.h
src/core/: CMakeLists.txt  DirectoryService.cpp  DirectoryService.h  FrameService.cpp  FrameService.h  ImGuiService.cpp  ImGuiService.h  VulkanContext.cpp  VulkanContext.h  WindowService.cpp  WindowService.h
src/core/glfw/: GLFWContext.cpp  GLFWContext.h
src/core/gui/: GuiContext.cpp  GuiContext.h
src/core/service/: SnapshotService.cpp  SnapshotService.h  ThreadManager.cpp  ThreadManager.h
src/core/vulkan/: VulkanContext.cpp  VulkanContext.h  VulkanUtils.cpp  VulkanUtils.h
src/dto/: Notification.h
src/editor/: CMakeLists.txt  EditorContext.cpp  EditorContext.h  EditorPanel.cpp  EditorPanel.h
src/engine/: CMakeLists.txt  Engine.cpp  Engine.h  EngineContext.cpp  EngineContext.h  LevelOfDetail.cpp  RuntimeRepository.h  engine-definitions.h
src/enum/: ComponentType.cpp  ComponentType.h  EditorMode.h  EngineResourceIDs.h  EntryType.h  FieldType.h  LevelOfDetail.h  LightType.h  LightVolumeType.h  NotificationSeverity.h  PassType.h  ResourceType.h  ShadingMode.h  engine-definitions.h
src/renderer/: IUIRenderer.h  RendererContext.cpp  RendererContext.h  RendererCoreData.h  VulkanContext.cpp  VulkanContext.h  VulkanCoreData.h  VulkanUtils.cpp  VulkanUtils.h
src/runtime/: EngineContext.cpp  EngineContext.h
src/ui/: AbstractPanel.cpp  AbstractPanel.h  EditorPanel.cpp  EditorPanel.h  EditorUIRenderer.cpp  EditorUIRenderer.h  GLFWContext.cpp  GLFWContext.h  GuiContext.cpp  GuiContext.h  IPanel.h  IUIRenderer.h
src/util/: FileDialogUtil.h  FilesUtil.h  ImageUtils.h  Logger.h  Serializable.cpp  ShaderUtil.cpp  ShaderUtil.h  UIUtil.h  Util.h  VulkanUtils.cpp  VulkanUtils.h  serialization-definitions.h
tests/: AIAssistantServiceTest.cpp  ApplicationContextTest.cpp  ApplicationEventContextTest.cpp  AsyncSyncServiceTest.cpp  CMakeLists.txt  DirtyStateServiceConcurrencyTest.cpp  DirtyStateServiceTest.cpp  DockServiceTest.cpp  EventServiceTest.cpp  HistoryEventServiceTest.cpp  HistoryServiceTest.cpp  InspectableTest.cpp  LuaServiceTest.cpp  ReflectionTest.cpp  ToolPromptTest.cpp  TransformServiceTest.cpp  WorldRepositoryTest.cpp
(+1535 files in other folders)
